--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -6,7 +6,9 @@
     <title>Definitivo</title>
     <!-- <script src="/scripts/first_point.js"></script> -->
     <!-- <script src="/scripts/second_point.js"></script> -->
-    <script src="/scripts/third_point.js"></script>
+    <!-- <script src="/scripts/third_point.js"></script> -->
+    <!-- <script src="/scripts/fourth.js"></script> -->
+    <script src="/scripts/sixth.js"></script>
 </head>
 <body>
     <h1>A tope</h1>
