Jueputa se me paso la hora

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Definitivo</title>
-    <!-- <script src="/scripts/first_point.js"></script> -->
-    <!-- <script src="/scripts/second_point.js"></script> -->
-    <!-- <script src="/scripts/third_point.js"></script> -->
-    <!-- <script src="/scripts/fourth.js"></script> -->
+    <script src="/scripts/first_point.js"></script>
+    <script src="/scripts/second_point.js"></script>
+    <script src="/scripts/third_point.js"></script>
+    <script src="/scripts/fourth.js"></script>
+    <script src="/scripts/fifth.js"></script>
     <script src="/scripts/sixth.js"></script>
+    <script src="/scripts/seventh.js"></script>
+    <script src="/scripts/eighth.js"></script>
+    <script src="/scripts/ninth.js"></script>
+    <script src="/scripts/tenth.js"></script>
+    <script src="/scripts/eleventh.js"></script>
+    <script src="/scripts/twelfth.js"></script>
 </head>
 <body>
     <h1>A tope</h1>
